fix(security): 修复 Lua 脚本参数传递问题，调整限流默认值
- 将参数直接嵌入 Lua 脚本，彻底解决 ARGV 为 nil 的问题
- 默认限流值从 60 调整为 300次/分钟（每接口独立计数，约5次/秒）
- 更新技术文档，移除已删除的 @RateLimit 注解相关说明

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>